objects/Commissions_Estimator_Persistency__mdt.object
<CustomObject>
    <fields>
        <fullName>Goal_Attained_Max__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goal Attained Max</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Attained_Min__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goal Attained Min</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_Payout__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target Payout</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Commissions Estimator Persistency</label>
    <pluralLabel>Commissions Estimator Persistency</pluralLabel>
</CustomObject>